--- a/src/css/common.css
+++ b/src/css/common.css
@@ -81,6 +81,7 @@ body {
   font-weight: 700;
   font-size: 32px;
   line-height: 1.19;
+  letter-spacing: -0.04em;
 }
 .title span {
   color: var(--violet-color);
@@ -92,7 +93,7 @@ body {
     padding: 0 32px;
   }
   .title {
-    font-size: 44px;
+    font-size: 52px;
     line-height: 1.08;
   }
 }
