change div to button

--- a/src/partials/bookModal.html
+++ b/src/partials/bookModal.html
@@ -1,6 +1,6 @@
 <div class="modal-wrapper js-modal-wrapper">
   <div class="modal modal-container">
-    <div class="icon-close js-icon-close"></div>
+    <button name="close-modal" class="icon-close js-icon-close"></button>
     <div class="modal-box">
       <img
         class="js-modal-img"
