Changed styles of charity funds logo during the hover event

--- a/src/css/charitableFunds.css
+++ b/src/css/charitableFunds.css
@@ -102,7 +102,9 @@
     margin-bottom: 24px;
   }
   .charity-logo {
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transition: transform 0.3s ease;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0.5); /* Виправлення властивості box-shadow */
+    border-radius: 10px; /* Радіуси кутів */
   }
   .charity-logo:hover {
     transform: scale(1.05);
