--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,17 +13,24 @@
       <li class="header-navigation-item">
         <a href="./shopListPage.html"
           >shopping list
-          <svg class="header-cart-icon" width="20" height="20">
-            <use href="./img/icons.svg#icon-cart"></use>
-          </svg>
+          <div class="header-icon-counter-container">
+            <svg class="header-cart-icon" width="20" height="20">
+              <use href="./img/icons.svg#icon-cart"></use>
+            </svg>
+            <span class="header-cart-counter">0</span>
+          </div>
         </a>
-      </li>
-      <li class="header-navigation-item">
-        <span class="header-cart-counter">0</span>
       </li>
     </ul>
   </nav>
   <div class="header-btns-wrapper">
+    <div class="header-icon-counter-container">
+      <svg class="header-cart-icon" width="20" height="20">
+        <use href="./img/icons.svg#icon-cart"></use>
+      </svg>
+      <span class="header-cart-counter">0</span>
+    </div>
+
     <label class="header-switch"
       ><input type="checkbox" class="header-input" /><span
         class="header-slider"
