--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,10 +25,12 @@
   </nav>
   <div class="header-btns-wrapper">
     <div class="header-icon-counter-container">
-      <svg class="header-cart-icon" width="20" height="20">
-        <use href="./img/icons.svg#icon-cart"></use>
-      </svg>
-      <span class="header-cart-counter">0</span>
+      <a href="./shopListPage.html">
+        <svg class="header-cart-icon" width="20" height="20">
+          <use href="./img/icons.svg#icon-cart"></use>
+        </svg>
+        <span class="header-cart-counter">0</span>
+      </a>
     </div>
 
     <label class="header-switch"
