--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,6 +16,7 @@
 @import url('./modal.css');
 @import url('./loader.css');
 @import url('./burgerMenu.css');
+@import url('./loginWindow.css');
 
 :root {
   font-synthesis: none;
