--- a/src/partials/loginWindow.html
+++ b/src/partials/loginWindow.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="../css/loginWindow.css" />
 <div class="login-wraper login-is-open">
   <form action="" class="login-form">
     <button class="login-form-close">
@@ -6,9 +5,9 @@
         <use href="../img/icons.svg#icon-x-close"></use>
       </svg>
     </button>
-    <input type="text" />
-    <input type="email" />
-    <input type="password" />
+    <input class="login-input" type="text" />
+    <input class="login-input" type="email" />
+    <input class="login-input" type="password" />
     <button class="login-form-submit"></button>
     <input class="login-form-switch" type="radio" name="login-switch" id="" />
     <input class="login-form-switch" type="radio" name="login-switch" id="" />
