--- a/src/css/loginWindow.css
+++ b/src/css/loginWindow.css
@@ -40,31 +40,42 @@
   height: 100%;
   margin: 0 auto;
   margin-top: 214px;
-  padding: 40px 20px;
+  padding: 35px 20px;
   position: relative;
 }
 
 .login-form-close {
   position: absolute;
-
+  top: 5px;
+  right: 10px;
   width: 20px;
   height: 20px;
   border: none;
   background-color: inherit;
-  fill: var(--button-number-color);
+  stroke: var(--main-fount-color);
   padding: 0;
   display: block;
 }
 
 .login-form-close:hover {
-  fill: var(--violet-color);
+  stroke: var(--violet-color);
 }
 
 .login-close-icon {
-  fill: inherit;
+  stroke: inherit;
   width: 20px;
   height: 20px;
   z-index: 1010000;
+}
+
+.login-input {
+  border: 2px solid var(--main-fount-color);
+  border-radius: 40px;
+  padding: 16px 24px 16px 24px;
+  width: 100%;
+  height: 50px;
+  background-color: inherit;
+  margin-top: 24px;
 }
 
 .login-form-submit {
