--- a/src/css/loginWindow.css
+++ b/src/css/loginWindow.css
@@ -1,11 +1,3 @@
-.login-is-closed {
-  right: -100%;
-}
-
-.login-is-open {
-  right: 0;
-}
-
 .login-wraper {
   background: var(--violet-color);
   background-repeat: no-repeat;
@@ -76,6 +68,26 @@
   height: 50px;
   background-color: inherit;
   margin-top: 24px;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.125;
+  letter-spacing: -0.01em;
+  text-transform: uppercase;
+  color: var(--button-number-color);
+}
+
+.login-input::placeholder {
+  color: var(--button-number-color);
+}
+
+.login-input:focus,
+.login-input:active {
+  border: 2px solid var(--gold-color) !important;
+}
+
+.login-input:hover {
+  border: 2px solid var(--violet-color);
 }
 
 .login-form-submit {
