--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -38,3 +38,17 @@ img {
 * {
   box-sizing: border-box;
 }
+
+input {
+  margin: 0;
+  padding: 0;
+  border: none;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  color: inherit;
+  background: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
