--- a/src/partials/loginWindow.html
+++ b/src/partials/loginWindow.html
@@ -5,9 +5,9 @@
         <use href="../img/icons.svg#icon-x-close"></use>
       </svg>
     </button>
-    <input class="login-input" type="text" />
-    <input class="login-input" type="email" />
-    <input class="login-input" type="password" />
+    <input class="login-input" type="text" placeholder="name" />
+    <input class="login-input" type="email" placeholder="email" />
+    <input class="login-input" type="password" placeholder="password" />
     <button class="login-form-submit"></button>
     <input class="login-form-switch" type="radio" name="login-switch" id="" />
     <input class="login-form-switch" type="radio" name="login-switch" id="" />
